# mini-rag

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt
assets/: mini-rag.postman_collection.json
docker/: docker-compose.yml
my_study/: 06_Docker_Mongodb.md  07_Mongodb_Schemes.md
my_study/FastAPI Tutorial/: README.MD  __init__.py  database.py  helper.py  main.py  models.py  todos.db
my_study/Mini Articles/: 01_FastAPI.md  02_FastAPI_Routers.md  03_Project_Structure.md  04_Upload_EndPoint.md  05_Process_File.md
my_study/MongoDB Tutorial/: README.md
src/: .env.example  main.py
src/controllers/: BaseController.py  DataController.py  ProcessController.py  ProjectController.py
src/helpers/: config.py
src/models/: BaseDataModel.py  ProjectModel.py  __init__.py
src/models/db_schemes/: __init__.py  data_chunk.py  project.py
src/models/enums/: DataBaseEnums.py  ProcessEnums.py  ResponseEnums.py  __init__.py
src/routes/: base.py  data.py
src/routes/schemes/: data.py
