[project]
name = "minirag-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==25.1.0",
    "fastapi==0.127.0",
    "langchain==1.2.0",
    "langchain-community==0.4.1",
    "pydantic-settings==2.12.0",
    "pymupdf==1.26.7",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.21",
    "uvicorn[standard]==0.40.0",
]
